docs/rollback/actipm-opportunity-listviews/before/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>FinServ__Opportunity Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cerrada Ganada</fullName>
        </values>
        <values>
            <fullName>Cerrada Perdida</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contacto inicial</fullName>
        </values>
        <values>
            <fullName>Formalización y Validación</fullName>
        </values>
        <values>
            <fullName>Identificar Necesidades</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Presentación de oferta</fullName>
        </values>
        <values>
            <fullName>Recalendarización</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FinServ__Wallet Share</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cerrada Ganada</fullName>
        </values>
        <values>
            <fullName>Cerrada Perdida</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Formalización y Validación</fullName>
        </values>
        <values>
            <fullName>Identificar Necesidades</fullName>
        </values>
        <values>
            <fullName>Presentación de oferta</fullName>
        </values>
        <values>
            <fullName>Recalendarización</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Oportunidad Persona Moral</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Analysis</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Pitch</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Patrimonial</fullName>
        <description>Proceso de ventas para el segmento Patrimonial</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cerrada Ganada</fullName>
        </values>
        <values>
            <fullName>Cerrada Perdida</fullName>
        </values>
        <values>
            <fullName>Formalización y Validación</fullName>
        </values>
        <values>
            <fullName>Identificar Necesidades</fullName>
        </values>
        <values>
            <fullName>Presentación de oferta</fullName>
        </values>
        <values>
            <fullName>Recalendarización</fullName>
        </values>
        <values>
            <fullName>Solicitar documentación</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Personas Físicas</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cerrada Ganada</fullName>
        </values>
        <values>
            <fullName>Cerrada Perdida</fullName>
        </values>
        <values>
            <fullName>Contacto inicial</fullName>
        </values>
        <values>
            <fullName>Identificar Necesidades</fullName>
        </values>
        <values>
            <fullName>Recalendarización</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Privada</fullName>
        <description>Proceso de ventas para las oportunidades de Privada</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cerrada Ganada</fullName>
        </values>
        <values>
            <fullName>Cerrada Perdida</fullName>
        </values>
        <values>
            <fullName>Cita de seguimiento</fullName>
        </values>
        <values>
            <fullName>Contactado</fullName>
        </values>
        <values>
            <fullName>Propuesta de inversión</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Seguros</fullName>
        <description>Insurance Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cerrada Ganada</fullName>
        </values>
        <values>
            <fullName>Cerrada Perdida</fullName>
        </values>
        <values>
            <fullName>Contacto inicial</fullName>
        </values>
        <values>
            <fullName>Formalización y Validación</fullName>
        </values>
        <values>
            <fullName>Identificar Necesidades</fullName>
        </values>
        <values>
            <fullName>Recalendarización</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Seguros_Pipeline</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cerrada Ganada</fullName>
        </values>
        <values>
            <fullName>Cerrada Perdida</fullName>
        </values>
        <values>
            <fullName>Contacto inicial</fullName>
        </values>
        <values>
            <fullName>Presentación de oferta</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Wealth Management</fullName>
        <description>Proceso de ventas para wealth management</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cerrada Ganada</fullName>
        </values>
        <values>
            <fullName>Cerrada Perdida</fullName>
        </values>
        <values>
            <fullName>Cita de seguimiento</fullName>
        </values>
        <values>
            <fullName>Contactado</fullName>
        </values>
        <values>
            <fullName>Primera cita</fullName>
        </values>
        <values>
            <fullName>Propuesta de inversión</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Ahorro__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ahorro</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ApellidoMaterno__c</fullName>
        <formula>Account.Suffix</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Apellido materno</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApellidoPaterno__c</fullName>
        <formula>Account.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Apellido paterno</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aseguradora__c</fullName>
        <label>Aseguradora</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MAPFRE</fullName>
                </value>
                <value>
                    <fullName>ZURICH</fullName>
                </value>
                <value>
                    <fullName>FIANZAS ATLAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asesor_de_Seguro_fsc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asesor de Seguro</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BPCliente__c</fullName>
        <formula>Account.Client_ID__c</formula>
        <label>BP Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BanqueroAsignado__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Banquero Asignado</label>
        <referenceTo>BranchUnitBusinessMember</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Banquero_Referidor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Usuario referido para oportunidades de Seguros Pipeline</description>
        <inlineHelpText>Selecciona el banquero referidor correspondiente.</inlineHelpText>
        <label>Banquero Referidor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Oportunidades_Referidas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sucursal</label>
        <referenceTo>BranchUnit</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHR_GoogleAds_FECHA_PRIMER_DEPOSITO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha Primer Depósito</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CHR_Monto_primer_deposito_global__c</fullName>
        <label>Monto primer depósito global</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CURP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CURP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CapacidadDeAhorro__c</fullName>
        <label>Capacidad de ahorro</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No estoy seguro</fullName>
                </value>
                <value>
                    <fullName>Menos de $10,000 MXN</fullName>
                </value>
                <value>
                    <fullName>Entre $10,000 y $20,000 MXN</fullName>
                </value>
                <value>
                    <fullName>Entre $20,000 y $30,000 MXN</fullName>
                </value>
                <value>
                    <fullName>Más de $30,000 MXN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CasaPropia__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Casa propia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Categoria__c</fullName>
        <label>Categoria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Celular__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Celular</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ClasificacionDePersona__c</fullName>
        <description>Campo integración SAP</description>
        <label>Clasificación de persona</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TipoDePersona__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Empleado</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>No aplica</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Profesionista Independiente</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Sin actividad económica</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Actividad empresarial</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Otros</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Persona Moral</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_Acepta_oferta__c</fullName>
        <label>¿Cliente Acepta oferta?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_Contactado__c</fullName>
        <defaultValue>true</defaultValue>
        <label>¿Cliente Contactado?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cliente_interesado__c</fullName>
        <label>¿Cliente interesado?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_realiz_firma_de_contrato__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cliente realizó firma de contrato</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cod_Inv__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Código Invitado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comentarios__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comentarios</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competencia__c</fullName>
        <description>Competitor</description>
        <label>Competencia</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Motivo_de_p_rdida__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CitiBanamex Priority</fullName>
                </value>
                <value>
                    <fullName>Premier de HSBC</fullName>
                </value>
                <value>
                    <fullName>Santader Select</fullName>
                </value>
                <value>
                    <fullName>Preferente de Banorte</fullName>
                </value>
                <value>
                    <fullName>Premium de Scotiabank</fullName>
                </value>
                <value>
                    <fullName>BBVA patrimonial y privada</fullName>
                </value>
                <value>
                    <fullName>No aplica</fullName>
                </value>
                <value>
                    <fullName>Afirme</fullName>
                </value>
                <value>
                    <fullName>Allianz</fullName>
                </value>
                <value>
                    <fullName>AXA Seguros</fullName>
                </value>
                <value>
                    <fullName>Banorte</fullName>
                </value>
                <value>
                    <fullName>BBVA</fullName>
                </value>
                <value>
                    <fullName>BNP Paribas</fullName>
                </value>
                <value>
                    <fullName>BTG Pactual</fullName>
                </value>
                <value>
                    <fullName>BX+</fullName>
                </value>
                <value>
                    <fullName>Chubb</fullName>
                </value>
                <value>
                    <fullName>CI Casa de Bolsa</fullName>
                </value>
                <value>
                    <fullName>Citibanamex</fullName>
                </value>
                <value>
                    <fullName>Fóndika</fullName>
                </value>
                <value>
                    <fullName>GBM Plus</fullName>
                </value>
                <value>
                    <fullName>General de Seguros</fullName>
                </value>
                <value>
                    <fullName>GNP Seguros</fullName>
                </value>
                <value>
                    <fullName>HIR Compañía de Seguros</fullName>
                </value>
                <value>
                    <fullName>HSBC</fullName>
                </value>
                <value>
                    <fullName>Inbursa</fullName>
                </value>
                <value>
                    <fullName>Insignia Life</fullName>
                </value>
                <value>
                    <fullName>Intercam</fullName>
                </value>
                <value>
                    <fullName>Invermerica Distribuidora de Fondos</fullName>
                </value>
                <value>
                    <fullName>Invex</fullName>
                </value>
                <value>
                    <fullName>IXE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comprobante_de_domicilio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comprobante de domicilio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConocimientoFinanciero__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Conocimiento financiero</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conteo_de_D_as_de_contactacion__c</fullName>
        <formula>Fecha_de_contactacion__c  -   DATEVALUE( LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conteo de Días de contactación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contrato_Creado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>¿Contrato Creado?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credito_Creado__c</fullName>
        <label>¿Crédito Desembolsado?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_assigned_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current assigned Branch</label>
        <referenceTo>BranchUnit</referenceTo>
        <relationshipLabel>Current Opportunities</relationshipLabel>
        <relationshipName>branch_opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <formula>IF(ISBLANK(Account.PersonContactId), Account.Name, Account.PersonContact.FirstName &amp;&quot; &quot;&amp; Account.PersonContact.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NombreCliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Descripcion_Complementaria_Formalizacion__c</fullName>
        <label>Descripción Complementaria Formalización</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SIN DATOS, DATOS PROPORCIONADOS POR ASESOR</fullName>
                </value>
                <value>
                    <fullName>SIN DATOS, SE DESCONOCE INFORMACIÓN</fullName>
                </value>
                <value>
                    <fullName>SIN DATOS, SIN RESPUESTA DEL ASESOR</fullName>
                </value>
                <value>
                    <fullName>ACEPTÓ, SE GESTIONA PAGO</fullName>
                </value>
                <value>
                    <fullName>ACEPTÓ, COMPROMISO PAGO</fullName>
                </value>
                <value>
                    <fullName>ACEPTÓ, REALIZAR ENDOSO</fullName>
                </value>
                <value>
                    <fullName>ACEPTÓ, INCIDENCIA DE PAGO</fullName>
                </value>
                <value>
                    <fullName>NO ACEPTÓ, POR COSTO</fullName>
                </value>
                <value>
                    <fullName>NO ACEPTÓ, SIN BIEN ASEGURABLE</fullName>
                </value>
                <value>
                    <fullName>NO ACEPTÓ, MAL SERVICIO ASEGURADORA</fullName>
                </value>
                <value>
                    <fullName>NO ACEPTÓ, MAL SERVICIO AGENTE</fullName>
                </value>
                <value>
                    <fullName>NO ACEPTÓ, MAL SERVICIO ACTINVER</fullName>
                </value>
                <value>
                    <fullName>VOLVER A LLAMAR, FECHA DE SEGUIMIENTO</fullName>
                </value>
                <value>
                    <fullName>NO CONTACTADO, NÚMERO NO EXISTE O NO DA TONO</fullName>
                </value>
                <value>
                    <fullName>NO CONTACTADO, NO RESPONDIERON</fullName>
                </value>
                <value>
                    <fullName>NO CONTACTADO, ME CUELGAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Descripcion_Complementaria_Identificar_N__c</fullName>
        <label>Descripción Complementaria Necesidades</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SIN DATOS, DATOS PROPORCIONADOS POR ASESOR</fullName>
                </value>
                <value>
                    <fullName>SIN DATOS, SE DESCONOCE INFORMACIÓN</fullName>
                </value>
                <value>
                    <fullName>SIN DATOS, SIN RESPUESTA DEL ASESOR</fullName>
                </value>
                <value>
                    <fullName>ACEPTÓ, SE GESTIONA PAGO</fullName>
                </value>
                <value>
                    <fullName>ACEPTÓ, COMPROMISO PAGO</fullName>
                </value>
                <value>
                    <fullName>ACEPTÓ, REALIZAR ENDOSO</fullName>
                </value>
                <value>
                    <fullName>ACEPTÓ, INCIDENCIA DE PAGO</fullName>
                </value>
                <value>
                    <fullName>NO ACEPTÓ, POR COSTO</fullName>
                </value>
                <value>
                    <fullName>NO ACEPTÓ, SIN BIEN ASEGURABLE</fullName>
                </value>
                <value>
                    <fullName>NO ACEPTÓ, MAL SERVICIO ASEGURADORA</fullName>
                </value>
                <value>
                    <fullName>NO ACEPTÓ, MAL SERVICIO AGENTE</fullName>
                </value>
                <value>
                    <fullName>NO ACEPTÓ, MAL SERVICIO ACTINVER</fullName>
                </value>
                <value>
                    <fullName>VOLVER A LLAMAR, FECHA DE SEGUIMIENTO</fullName>
                </value>
                <value>
                    <fullName>NO CONTACTADO, NÚMERO NO EXISTE O NO DA TONO</fullName>
                </value>
                <value>
                    <fullName>NO CONTACTADO, NO RESPONDIERON</fullName>
                </value>
                <value>
                    <fullName>NO CONTACTADO, ME CUELGAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Descripcion_Complementaria__c</fullName>
        <label>Descripción Complementaria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SIN DATOS, DATOS PROPORCIONADOS POR ASESOR</fullName>
                </value>
                <value>
                    <fullName>SIN DATOS, SE DESCONOCE INFORMACIÓN</fullName>
                </value>
                <value>
                    <fullName>SIN DATOS, SIN RESPUESTA DEL ASESOR</fullName>
                </value>
                <value>
                    <fullName>ACEPTÓ, SE GESTIONA PAGO</fullName>
                </value>
                <value>
                    <fullName>ACEPTÓ, COMPROMISO PAGO</fullName>
                </value>
                <value>
                    <fullName>ACEPTÓ, REALIZAR ENDOSO</fullName>
                </value>
                <value>
                    <fullName>ACEPTÓ, INCIDENCIA DE PAGO</fullName>
                </value>
                <value>
                    <fullName>NO ACEPTÓ, POR COSTO</fullName>
                </value>
                <value>
                    <fullName>NO ACEPTÓ, SIN BIEN ASEGURABLE</fullName>
                </value>
                <value>
                    <fullName>NO ACEPTÓ, MAL SERVICIO ASEGURADORA</fullName>
                </value>
                <value>
                    <fullName>NO ACEPTÓ, MAL SERVICIO AGENTE</fullName>
                </value>
                <value>
                    <fullName>NO ACEPTÓ, MAL SERVICIO ACTINVER</fullName>
                </value>
                <value>
                    <fullName>VOLVER A LLAMAR, FECHA DE SEGUIMIENTO</fullName>
                </value>
                <value>
                    <fullName>NO CONTACTADO, NÚMERO NO EXISTE O NO DA TONO</fullName>
                </value>
                <value>
                    <fullName>NO CONTACTADO, NO RESPONDIERON</fullName>
                </value>
                <value>
                    <fullName>NO CONTACTADO, ME CUELGAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Descripcion_Formalizacion_y_validacion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Descripción de Formalización</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Descripcion_Identificar_Necesidades__c</fullName>
        <description>Campo de texto de área, para la etapa de Descripción de Identificar Necesidades</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Descripción de Identificar Necesidades</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Descripcion_de_No_Interes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Este campo es obligatorio cuando selecciones CONDICIONES, OTRO u OTRO INTERMEDIARIO.

Si eliges CONDICIONES: menciona cuáles.

Si eliges OTRO: indica cuál.

Si eliges OTRO INTERMEDIARIO: especifica cuál.</inlineHelpText>
        <label>Descripción de No Interés</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Divisi_n__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>División</label>
        <referenceTo>BranchUnit</referenceTo>
        <relationshipLabel>Oportunidades (División)</relationshipLabel>
        <relationshipName>Oportunidades1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Elementos_de_presentaci_n__c</fullName>
        <label>Elementos de presentación</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Presentación personal</fullName>
                </value>
                <value>
                    <fullName>Presentación Institucional</fullName>
                </value>
                <value>
                    <fullName>Presentación de portafolio de productos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailProspecto__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email del prospecto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorSAP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error en SAP</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_escalationProcess_MKT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Errores Escalaciones</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Especifica_Otro_Producto__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Especifica Otro (Producto)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstadoCivil__c</fullName>
        <description>Campo integración SAP</description>
        <label>Estado Civil</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <label>Casado/a</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Soltero/a</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Separado/a</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Divorciado/a</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Viudo/a</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>